--- a/src/style2.css
+++ b/src/style2.css
@@ -92,7 +92,7 @@ form {
   margin-top: 25px;
 }
 
-input[type="text"],
+/* input[type="text"], */
 input[type="number"],
 input[type="email"] {
   padding: 12px;
@@ -102,6 +102,10 @@ input[type="email"] {
   background: #1f1f1f;
   color: #e6e6e6;
   transition: 0.2s;
+}
+
+input[type="text"]{
+  color: red;
 }
 
 input:focus {
