--- a/src/style2.css
+++ b/src/style2.css
@@ -92,7 +92,7 @@ form {
   margin-top: 25px;
 }
 
-/* input[type="text"], */
+input[type="text"],
 input[type="number"],
 input[type="email"] {
   padding: 12px;
@@ -104,9 +104,19 @@ input[type="email"] {
   transition: 0.2s;
 }
 
-input[type="text"]{
+/* #upd-name{
+  padding: 12px;
+  border-radius: 8px;
+  border: 1px solid #555;
+  font-size: 14px;
+  background: #1f1f1f;
+  color: #e6e6e6;
+  transition: 0.2s;
+} */
+
+/* input[type="text"]{
   background-color: red;
-}
+} */
 
 input:focus {
   border-color: #d4a017;
